defconfig: update name

--- a/arch/arm64/configs/lavender-perf_defconfig
+++ b/arch/arm64/configs/lavender-perf_defconfig
@@ -49,7 +49,7 @@ CONFIG_THREAD_INFO_IN_TASK=y
 CONFIG_INIT_ENV_ARG_LIMIT=32
 CONFIG_CROSS_COMPILE=""
 # CONFIG_COMPILE_TEST is not set
-CONFIG_LOCALVERSION="-Phoenix_Kernel_S1.2"
+CONFIG_LOCALVERSION="-Phoenix_Kernel-S1.2"
 # CONFIG_LOCALVERSION_AUTO is not set
 CONFIG_DEFAULT_HOSTNAME="Arieffst@#fstprjct"
 CONFIG_SWAP=y
@@ -4155,7 +4155,6 @@ CONFIG_QCOM_BIMC_BWMON=y
 CONFIG_DEVFREQ_GOV_QCOM_GPUBW_MON=y
 # CONFIG_ARMBW_HWMON is not set
 CONFIG_ARM_MEMLAT_MON=y
-CONFIG_SIMPLE_GPU_ALGORITHM=y
 # CONFIG_QCOMCCI_HWMON is not set
 # CONFIG_QCOM_M4M_HWMON is not set
 CONFIG_DEVFREQ_GOV_QCOM_BW_HWMON=y
