--- a/arch/arm64/configs/phoenix-lavender-newcam_defconfig
+++ b/arch/arm64/configs/phoenix-lavender-newcam_defconfig
@@ -653,8 +653,8 @@ CONFIG_CPU_FREQ_GOV_POWERSAVE=y
 # CONFIG_CPU_FREQ_GOV_INTERACTIVE is not set
 CONFIG_CPU_FREQ_GOV_CONSERVATIVE=y
 # CONFIG_CPU_BOOST is not set
-# CONFIG_CPU_FREQ_GOV_SCHEDUTIL is not set
 CONFIG_CPU_FREQ_GOV_BLU_SCHEDUTIL=y
+CONFIG_CPU_FREQ_GOV_SCHEDUTIL=y
 
 #
 # CPU frequency scaling drivers
