test 1 	modified:   .circleci/build.sh 	modified:   .circleci/config.yml 	modified:   .gitignore 	modified:   arch/arm64/configs/lavender-oldcam_defconfig

--- a/.gitignore
+++ b/.gitignore
@@ -67,6 +67,7 @@ Module.symvers
 #
 !.gitignore
 !.mailmap
+!.circleci
 !.cocciconfig
 
 #
@@ -129,4 +130,3 @@ Android.bp
 /stock_32/
 /stock/
 /clang/
-
