--- a/arch/arm/boot/dts/qcom/sdm660.dtsi
+++ b/arch/arm/boot/dts/qcom/sdm660.dtsi
@@ -288,7 +288,7 @@
 					cpu = <&CPU6>;
 				};
 
-				core3 {
+        core3 {
 					cpu = <&CPU7>;
 				};
 			};
@@ -300,63 +300,61 @@
 
 		CPU_COST_0: core-cost0 {
 			busy-cost-data = <
-				633600	41
-				902400	70
-				1113600	83
-				1401600	146
-				1536000	158
-				1747200	228
-				1843200	285
+				 633600 1091
+				 902400 1579
+				1113600 2065
+				1401600 3034
+				1536000 3686
+				1747200 5105
+				1843200 5959
 			>;
 			idle-cost-data = <
-				20 16 10 8
+				4 4 0 0
 			>;
 		};
 
 		CPU_COST_1: core-cost1 {
 			busy-cost-data = <
-				1113600	307
-				1401600	485
-				1747200	857
-				1804800	883
-				1958400	1222
-				2150400	1592
-				2208000	1632
-				2457600	2080
+				1113600 4943
+				1401600 7789
+				1747200 13766
+        1804800 15181
+				1958400 19758
+				2150400 27509
+				2208000 30369
 			>;
 			idle-cost-data = <
-				100 80 60 40
+			        6 6 0 0
 			>;
 		};
 
 		CLUSTER_COST_0: cluster-cost0 {
 			busy-cost-data = <
-				633600	4
-				902400	5
-				1113600	7
-				1401600	9
-				1536000	9
-				1747200	11
-				1843200	13
+				 633600 22
+				 902400 27
+				1113600 32
+				1401600 40
+				1536000 45
+				1747200 55
+				1843200 61
 			>;
 			idle-cost-data = <
-				4 3 2 1
+				 41 41 41 0
 			>;
 		};
 
 		CLUSTER_COST_1: cluster-cost1 {
 			busy-cost-data = <
-				1113600	14
-				1401600	17
-				1747200	25
-				1804800	31
-				1958400	31
-				2150400	37
-				2208000	44
-				2457600	45
+				1113600 54
+				1401600 74
+				1747200 116
+        1804800 125
+				1958400 157
+				2150400 209
+				2208000 229
 			>;
 			idle-cost-data = <
-				4 3 2 1
+				50 50 50 0
 			>;
 		};
 	};
@@ -1209,7 +1207,7 @@
 
 	cpubw: qcom,cpubw {
 		compatible = "qcom,devbw";
-		governor = "performance";
+		governor = "schedutil";
 		qcom,src-dst-ports = <1 512>;
 		qcom,active-only;
 		qcom,bw-tbl =
@@ -1240,7 +1238,7 @@
 
 	mincpubw: qcom,mincpubw {
 		compatible = "qcom,devbw";
-		governor = "powersave";
+		governor = "schedutil";
 		qcom,src-dst-ports = <1 512>;
 		qcom,active-only;
 		qcom,bw-tbl =
@@ -1261,7 +1259,7 @@
 
 	memlat_cpu0: qcom,memlat-cpu0 {
 		compatible = "qcom,devbw";
-		governor = "powersave";
+		governor = "schedutil";
 		qcom,src-dst-ports = <1 512>;
 		qcom,active-only;
 		qcom,bw-tbl =
@@ -1282,7 +1280,7 @@
 
 	memlat_cpu4: qcom,memlat-cpu4 {
 		compatible = "qcom,devbw";
-		governor = "powersave";
+		governor = "schedutil";
 		qcom,src-dst-ports = <1 512>;
 		qcom,active-only;
 		qcom,bw-tbl =
@@ -1306,9 +1304,8 @@
 		qcom,cpulist = <&CPU0 &CPU1 &CPU2 &CPU3>;
 		qcom,target-dev = <&memlat_cpu0>;
 		qcom,core-dev-table =
-			< 902400 762 >,
 			< 1401600 2086 >,
-			< 1881600 3879 >;
+			< 1843200 3879 >;
 	};
 
 	devfreq_memlat_4: qcom,arm-memlat-mon-4 {
@@ -1319,22 +1316,21 @@
 			< 1113600 762 >,
 			< 1401600 3879 >,
 			< 2150400 5931 >,
-			< 2457600 6881 >;
+			< 2208000 6881 >;
 	};
 
 	devfreq_cpufreq: devfreq-cpufreq {
 		mincpubw-cpufreq {
 			target-dev = <&mincpubw>;
 			cpu-to-dev-map-0 =
-				< 633600 762 >,
 				< 1401600 1571 >,
-				< 1881600 2929 >;
+				< 1843200 2929 >;
 			cpu-to-dev-map-4 =
 				< 1113600 762 >,
 				< 1401600 2086 >,
 				< 1747200 2929 >,
 				< 2150400 3879 >,
-				< 2457600 6881 >;
+				< 2208000 6881 >;
 		};
 	};
 
@@ -1472,12 +1468,9 @@
 		qcom,governor-per-policy;
 
 		qcom,cpufreq-table-0 =
-			<  633600 >,
-			<  902400 >,
 			< 1113600 >,
 			< 1401600 >,
 			< 1536000 >,
-			< 1612800 >,
 			< 1747200 >,
 			< 1843200 >;
 
@@ -1485,11 +1478,9 @@
 			< 1113600 >,
 			< 1401600 >,
 			< 1747200 >,
-			< 1804800 >,
 			< 1958400 >,
 			< 2150400 >,
-			< 2208000 >,
-			< 2457600 >;
+			< 2208000 >;
 	};
 
 	sdhc_1: sdhci@c0c4000 {
