--- a/arch/arm64/configs/lavender-oldcam_defconfig
+++ b/arch/arm64/configs/lavender-oldcam_defconfig
@@ -1,6 +1,6 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Linux/arm64 4.4.261 Kernel Configuration
+# Linux/arm64 4.4.262 Kernel Configuration
 #
 CONFIG_ARM64=y
 CONFIG_64BIT=y
@@ -321,8 +321,10 @@ CONFIG_IOSCHED_ANXIETY=y
 CONFIG_IOSCHED_ZEN=y
 # CONFIG_IOSCHED_BFQ is not set
 # CONFIG_DEFAULT_DEADLINE is not set
-CONFIG_DEFAULT_MAPLE=y
 # CONFIG_DEFAULT_NOOP is not set
+# CONFIG_DEFAULT_ANXIETY is not set
+CONFIG_DEFAULT_MAPLE=y
+# CONFIG_DEFAULT_ZEN is not set
 CONFIG_DEFAULT_IOSCHED="maple"
 CONFIG_ASN1=y
 CONFIG_ARCH_INLINE_SPIN_TRYLOCK=y
@@ -735,7 +737,6 @@ CONFIG_TCP_CONG_ADVANCED=y
 # CONFIG_TCP_CONG_DCTCP is not set
 CONFIG_TCP_CONG_CDG=y
 CONFIG_DEFAULT_CDG=y
-# CONFIG_DEFAULT_WESTWOOD is not set
 # CONFIG_DEFAULT_RENO is not set
 CONFIG_DEFAULT_TCP_CONG="cdg"
 # CONFIG_TCP_MD5SIG is not set
